--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,24 @@
 asgiref==3.5.2
 certifi==2022.9.24
 charset-normalizer==2.1.1
+contourpy==1.0.6
+cycler==0.11.0
 dj-database-url==1.0.0
 Django==4.1.3
 django-csp==3.7
+fonttools==4.38.0
 gunicorn==20.1.0
 idna==3.4
+kiwisolver==1.4.4
+matplotlib==3.6.2
+numpy==1.23.5
+packaging==22.0
+Pillow==9.3.0
 psycopg2==2.9.5
+pyparsing==3.0.9
+python-dateutil==2.8.2
 requests==2.28.1
+six==1.16.0
 sqlparse==0.4.3
 urllib3==1.26.13
 whitenoise==6.2.0
