--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.5.2
+async-timeout==4.0.2
 certifi==2022.9.24
 charset-normalizer==2.1.1
+click==8.1.3
 contourpy==1.0.6
 cycler==0.11.0
 dj-database-url==1.0.0
@@ -17,7 +19,9 @@ Pillow==9.3.0
 psycopg2==2.9.5
 pyparsing==3.0.9
 python-dateutil==2.8.2
+redis==4.4.0
 requests==2.28.1
+rq==1.11.1
 six==1.16.0
 sqlparse==0.4.3
 urllib3==1.26.13
