--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ cycler==0.11.0
 dj-database-url==1.0.0
 Django==4.1.3
 django-csp==3.7
+django-rq==2.6.0
 fonttools==4.38.0
 gunicorn==20.1.0
 idna==3.4
