--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ dj-database-url==1.0.0
 Django==4.1.7
 django-csp==3.7
 django-rq==2.7.0
+docutils==0.19
 fonttools==4.38.0
 gunicorn==20.1.0
 idna==3.4
