--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.6.0
 async-timeout==4.0.2
+backports.zoneinfo==0.2.1
 certifi==2022.12.7
 charset-normalizer==3.1.0
 click==8.1.3
@@ -13,6 +14,7 @@ docutils==0.19
 fonttools==4.39.3
 gunicorn==20.1.0
 idna==3.4
+importlib-resources==5.12.0
 kiwisolver==1.4.4
 matplotlib==3.7.1
 numpy==1.24.3
@@ -25,8 +27,9 @@ redis==4.5.4
 requests==2.28.2
 rq==1.13.0
 six==1.16.0
-sqlparse==0.4.3
+sqlparse==0.4.4
 trimesh==3.21.4
-typing_extensions==4.5.0
+typing-extensions==4.5.0
 urllib3==1.26.15
 whitenoise==6.4.0
+zipp==3.15.0
