--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ cycler==0.11.0
 dj-database-url==2.0.0
 Django==4.2
 django-csp==3.7
+django-redis==5.4.0
 django-rq==2.7.0
 docutils==0.19
 fonttools==4.39.3
@@ -27,6 +28,6 @@ rq==1.13.0
 six==1.16.0
 sqlparse==0.4.4
 trimesh==3.21.4
-typing-extensions==4.5.0
+typing_extensions==4.5.0
 urllib3==1.26.15
 whitenoise==6.4.0
