pip-system-certs

--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ matplotlib==3.7.1
 numpy==1.24.3
 packaging==23.1
 Pillow==9.5.0
+pip-system-certs==4.0
 psycopg2==2.9.6
 pyparsing==3.0.9
 python-dateutil==2.8.2
@@ -31,3 +32,4 @@ trimesh==3.21.4
 typing_extensions==4.5.0
 urllib3==1.26.15
 whitenoise==6.4.0
+wrapt==1.17.2
